<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/envTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_default"
        android:fontFamily="sans-serif-black"
        android:text="@string/homeTitle"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="52dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="logo img of app"
        app:layout_constraintBottom_toTopOf="@+id/aware1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_leaflflogo" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:text="@string/login"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/envTitle"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/divider3"
        android:layout_width="379dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/aware1"
        android:layout_width="64dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/margin_default"
        android:background="@android:color/transparent"
        android:contentDescription="environment awareness button with logo"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider3"
        app:srcCompat="@drawable/ic_awarenesslogo" />

    <TextView
        android:id="@+id/envAwareness"
        android:layout_width="90dp"
        android:layout_height="41dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/envAwarenessString"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/subTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aware1" />

    <ImageButton
        android:id="@+id/newsLogo"
        android:layout_width="64dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/margin_default"
        android:background="@android:color/transparent"
        android:contentDescription="news leaf logo"
        android:gravity="center"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/coverageLogo"
        app:layout_constraintStart_toEndOf="@+id/aware1"
        app:layout_constraintTop_toTopOf="@+id/divider3"
        app:srcCompat="@drawable/ic_newsleaf" />

    <TextView
        android:id="@+id/txtNews"
        android:layout_width="81dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/news"
        android:textColor="@android:color/black"
        android:textSize="@dimen/subTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsLogo" />

    <ImageButton
        android:id="@+id/coverageLogo"
        android:layout_width="64dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="tree logo for forest coverage"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider3"
        app:srcCompat="@drawable/ic_forestlogo" />

    <TextView
        android:id="@+id/txtCoverage"
        android:layout_width="70dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:text="@string/coverageSubtitle"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/subTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coverageLogo" />

    <ImageButton
        android:id="@+id/organizationLogo"
        android:layout_width="64dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:background="@android:color/transparent"
        android:contentDescription="third party organizations logo"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:srcCompat="@drawable/ic_orglogo" />

    <TextView
        android:id="@+id/txtOrganization"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="220dp"
        android:text="@string/txtorganization"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/subTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <ImageButton
        android:id="@+id/quizLogo"
        android:layout_width="94dp"
        android:layout_height="47dp"
        android:layout_marginTop="155dp"
        android:background="@android:color/transparent"
        android:contentDescription="quiz logo"
        android:gravity="center"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/plantTreeLogo"
        app:layout_constraintStart_toEndOf="@+id/organizationLogo"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:srcCompat="@drawable/ic_quizcroplogo" />

    <TextView
        android:id="@+id/txtQuiz"
        android:layout_width="75dp"
        android:layout_height="18dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/txtQuiz"
        android:textColor="@android:color/black"
        android:textSize="@dimen/subTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizLogo" />

    <ImageButton
        android:id="@+id/plantTreeLogo"
        android:layout_width="64dp"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="35dp"
        android:background="@android:color/transparent"
        android:contentDescription="plant tree logo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:srcCompat="@drawable/ic_plantlogo" />

    <TextView
        android:id="@+id/txtPlanttree"
        android:layout_width="55dp"
        android:layout_height="37dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="44dp"
        android:text="@string/txtPlant"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/subTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />


    <View
        android:id="@+id/divider2"
        android:layout_width="379dp"
        android:layout_height="1dp"
        android:layout_marginTop="280dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

</androidx.constraintlayout.widget.ConstraintLayout>