<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="56dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_padding"
        app:srcCompat="@drawable/ic_leaflflogo" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:textColor="@android:color/black"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:text="@string/txtSignIn" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/email"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginRight="@dimen/margin_default"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/lblPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginLeft="@dimen/margin_default"
        android:textColor="@android:color/black"
        android:text="@string/pw" />

    <EditText
        android:id="@+id/txtPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginRight="@dimen/margin_default"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark"
        android:layout_gravity="center"
        android:text="Sign In" />

    <Button
        android:id="@+id/btnCreateAcc"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="239dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:text="Don't have an account? \nClick here to create account."
        android:textAllCaps="false"
        android:textColor="@android:color/black" />


</LinearLayout>